# wave

./: .gitignore  Cargo.toml
.cargo/: config.toml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
wave/: Cargo.toml
wave-account/: Cargo.toml
wave-account/src/: account.rs  lib.rs
wave-app/: package.json  pnpm-lock.yaml
wave-app/src-tauri/: Cargo.toml
wave-core/: Cargo.toml
wave-core/src/: author.rs  connection.rs  error.rs  lib.rs  messages.rs  node.rs  resource.rs  router.rs  server.rs  store.rs  test.rs  topic.rs
wave-core/src/messages/: store.rs
wave-core/static/: fallback.html
wave-proxy/: Cargo.toml
wave-proxy/src/: error.rs  lib.rs  server.rs  socks5.rs  tests.rs  util.rs
wave-proxy/src/protocol/: mod.rs  socks5.rs
wave-proxy/src/protocol/socks5/: codec.rs  tests.rs  types.rs
wave-proxy/src/services/: mod.rs  socks5.rs
wave-proxy/src/services/socks5/: codec.rs  tests.rs  types.rs
wave-resset/: Cargo.toml
wave-resset/src/: asset.rs  file.rs  lib.rs  store.rs
wave-resset/src/store/: client.rs
wave-rpc/: Cargo.toml
wave-rpc/src/: body.rs  body_stream.rs  client.rs  code.rs  error.rs  lib.rs  message.rs  request.rs  response.rs  service.rs  test.rs  tests.rs  transport.rs
wave-rpc/src/client/: error.rs  mod.rs  pool.rs
wave-rpc/src/codec/: mod.rs
wave-rpc/src/handle/: mod.rs
wave-rpc/src/io/: mod.rs
wave-rpc/src/message/: bincode.rs  stream.rs
wave-rpc/src/proto/: mod.rs
wave-rpc/src/server/: code.rs  context.rs  mod.rs  request.rs  response.rs  router.rs  service.rs  transport.rs
wave-rpc/src/server/service/: bincode.rs
wave-rpc/src/service/: mod.rs
wave-rpc/src/transport/: mod.rs  rmp.rs
wave-session/: Cargo.toml
wave-session/src/: chat.rs  error.rs  lib.rs  message.rs  record.rs  service.rs  session.rs
wave-session/src/author/: mod.rs
wave-session/src/message/: content.rs  error.rs  mod.rs
wave-session/src/record/: client.rs  file.rs  text.rs
wave-session/src/session/: actor.rs  client.rs  index.rs  mod.rs  record.rs  stats.rs
wave-session/src/user/: mod.rs
wave/src/: cli.rs  config.rs  lib.rs  main.rs  store.rs  tests.rs
wave/src/client/: mod.rs  tests.rs
wave/src/server/: mod.rs
