[workspace]
members = ["wave", "wave-core", "wave-proxy"]
resolver = "2"

[workspace.dependencies]
tokio = "1.42"
futures = "0.3"
futures-lite = "2"
async-trait = "0.1"
async-channel = "2.3"
pin-project = { version = "1.1" }

bytes = "1.9"
tracing = "0.1"
tracing-subscriber = "0.3"

anyhow = "1.0"

serde = "1.0"
serde_json = "1.0"
serde_bytes = "0.11"

chrono = "0.4.38"

derive_more = "1.0.0"
