[workspace]
members = ["wave", "wave-core", "wave-proxy"]
resolver = "2"
package.rust-version = "1.85"
package.edition = "2024"

[workspace.dependencies]
iroh = "0.32"

tokio = "1.42"
futures = "0.3"
futures-lite = "2"
async-trait = "0.1.86"
async-channel = "2.3"
pin-project = { version = "1.1" }

bytes = "1.10.0"
tracing = "0.1"
tracing-subscriber = "0.3"

anyhow = "1.0"

serde = "1.0"
serde_json = "1.0"
serde_bytes = "0.11"

chrono = "0.4.38"

derive_more = "2.0.1"
