[package]
name = "wave"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "wave_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-rc", features = [] }

[dependencies]
tauri = { version = "2.0.0-rc", features = [] }
tauri-plugin-shell = "2.0.0-rc"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

[workspace]
members = []
resolver = "2"

[workspace.dependencies]
tokio = "1.40"
tokio-stream = "0.1.15"
futures = "0.3.30"
async-trait = "0.1.82"
async-stream = "0.3"
async-channel = "2.3.1"
moro = "0.4"

http = "1.1.0"
log = "0.4.22"
axum = "0.7.5"
tower = "0.5.1"
tower-http = "0.5.2"

tracing = "0.1.40"
tracing-subscriber = "0.3.18"

anyhow = "1.0.86"
thiserror = "1.0.62"

serde = "1.0"
serde_json = "1.0"
serde_byte = "0.11"

rbatis = "4.5"
rbdc = "4.5.35"
rbdc-sqlite = "4.5.5"
rbs = "4.5.18"

chrono = "0.4.38"
moka = "0.12.8"

iroh = "0.24"
