[package]
name = "wave-account"
version = "0.1.0"
edition = "2021"

[dependencies]
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = { version = "0.8" }

derive_more = { version = "*", features = [
    "from",
    "into",
    "display",
    "as_ref",
    "as_mut",
] }
serde = { workspace = true, features = ["derive"] }
