[package]
name = "wave-core"
version = "0.1.0"
edition = "2024"

[dependencies]
iroh = { workspace = true }

derive_more = { workspace = true, features = ["from", "display", "as_ref"] }
serde = { workspace = true, features = ["derive"] }

anyhow = { workspace = true }

# tokio = { workspace = true, features = [] }
# futures-lite = { workspace = true }
# async-trait = { workspace = true }
# async-stream = { version = "0.3" }

# ulid = { version = "1.1", features = ["serde"] }

bytes = { version = "1.7" }
