[package]
name = "wave-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
derive_more = { workspace = true, features = ["from", "display", "error"] }

# logging
tracing = { workspace = true }

bytes = { workspace = true }

[dev-dependencies]
reqwest = { version = "0.12", features = ["rustls-tls", "socks"] }
