[package]
name = "wave-resset"
version = "0.1.0"
edition = "2021"

[dependencies]
iroh = { workspace = true }
derive_more = { version = "*", features = [
    "from",
    "display",
    "as_ref",
    "as_mut",
] }
serde_bytes = { workspace = true }
serde = { workspace = true, features = ["derive"] }

anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
