[package]
name = "wave-rpc"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }

tokio = { workspace = true, features = [
    "macros",
    "rt",
    "net",
    "rt-multi-thread",
] }
futures = { workspace = true }

serde_bytes = { workspace = true }
serde = { workspace = true, features = ["derive"] }
rmp-serde = { version = "1.3", optional = true }
zerocopy = { version = "0.8", features = ["derive"] }
bytes = { version = "1.7" }
async-trait = { workspace = true }

[features]
default = []
with-rmp = ["rmp-serde"]
