[package]
name = "wave-rpc"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }

tokio = { workspace = true, features = [
    "macros",
    "rt",
    "net",
    "rt-multi-thread",
    "io-util",
] }
tokio-util = { version = "0.7", features = ["codec"] }
bytes = { version = "1.7" }

futures = { workspace = true }
async-trait = { workspace = true }
async-stream = { workspace = true }

serde_bytes = { workspace = true }
serde = { workspace = true, features = ["derive"] }
rmp-serde = { version = "1.3", optional = true }
bincode = { version = "1", optional = true }

zerocopy = { version = "0.8", features = ["derive"] }


[features]
default = []
rmp = ["rmp-serde"]
