[package]
name = "wave-rpc"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }

tokio = { workspace = true, features = ["macros"] }
tokio-util = { version = "0.7", features = ["codec", "compat"] }
tokio-stream = { version = "0.1" }
bytes = { version = "1.9" }

futures-lite = { version = "2" }
async-trait = { workspace = true }
async-stream = { workspace = true }
async-channel = { version = "2.3" }
oneshot = { version = "0.1", features = ["async"] }
async-executor = { version = "1.13" }
pin-project = { version = "1.1" }

serde_bytes = { workspace = true }
serde = { workspace = true, features = ["derive"] }
rmp-serde = { version = "1.3", optional = true }
bincode = { version = "1", optional = true }

zerocopy = { version = "0.8", features = ["derive"] }

deadpool = { version = "0.12", features = ["rt_tokio_1"] }

tracing = { version = "0.1" }

tower = { version = "0.5" }

derive_more = { version = "1.0.0-beta.7", features = [
    "error",
    "display",
    "from",
] }

[dev-dependencies]
tokio = { workspace = true, features = ["net", "rt"] }

[features]
default = ["bincode"]
rmp = ["rmp-serde"]
