[package]
name = "wave-session"
version = "0.1.0"
edition = "2021"

[dependencies]
wave-core = { path = "../wave-core" }
iroh = { workspace = true }
derive_more = { version = "1.0.0-beta.7", features = [
    "from",
    "display",
    "as_ref",
] }
zerocopy = { version = "0.7", features = ["derive"] }
serde_bytes = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

async-trait = { workspace = true }
async-channel = { workspace = true }

anyhow = { workspace = true }
thiserror = { workspace = true }

futures = { workspace = true }
tokio = { workspace = true, features = [] }

ulid = { version = "1.1", features = ["serde"] }
bytes = { version = "1.7" }
chrono = { version = "0.4" }
