[package]
name = "wave-session"
version = "0.1.0"
edition = "2021"

[dependencies]
wave-core = { path = "../wave-core" }
iroh-gossip = { version = "0.30" }

derive_more = { version = "1.0.0-beta.7", features = [
    "from",
    "display",
    "as_ref",
    "error",
] }
zerocopy = { version = "0.8", features = ["derive"] }
serde_bytes = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_with = { version = "3.9" }
postcard = { version = "1.0" }

async-trait = { workspace = true }
async-stream = "0.3"

anyhow = { workspace = true }

futures-lite = { workspace = true }
tokio = { workspace = true, features = [] }

ulid = { version = "1.1", features = ["serde"] }
bytes = { version = "1.7" }
chrono = { version = "0.4" }
