[package]
name = "wave"
version = "0.1.0"
edition = "2021"

[dependencies]
wave-core = { path = "../wave-core" }
wave-proxy = { path = "../wave-proxy" }

iroh = { workspace = true, features = [
    "discovery-pkarr-dht",
    "discovery-local-network",
] }
derive_more = { workspace = true, features = ["from", "display", "error"] }
tokio = { workspace = true, features = ["net"] }
futures-lite = { workspace = true }
async-channel = { workspae = true }

clap = { version = "4.5", features = ["derive"] }
config = { version = "0.15.7" }

serde = { workspace = true, features = ["derive"] }
bytes = { workspace = true }
anyhow = { workspace = true }
rand = { version = "0.9" }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
reqwest = { version = "0.12", features = ["socks"] }
axum = { version = "0.8.1" }
