[package]
name = "wave"
version = "0.1.0"
edition = "2021"

[dependencies]
wave-core = { path = "../wave-core" }
wave-proxy = { path = "../wave-proxy" }

iroh = { workspace = true, features = [
    "discovery-pkarr-dht",
    "discovery-local-network",
] }
serde = { workspace = true, features = ["derive"] }
bytes = { workspace = true }
anyhow = { workspace = true }
derive_more = { workspace = true, features = ["from", "display", "error"] }
rand = { version = "0.8" }
ulid = { version = "1.2" }

tokio = { version = "1.42", features = ["net"] }
futures-lite = { version = "2" }
async-channel = { version = "2.3" }

clap = { version = "4.5", features = ["derive"] }
config = { version = "0.15.7" }
dirs = { version = "6.0" }
redb = { version = "2.4" }
rmp-serde = { version = "1.3" }

tracing = { workspace = true }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[dev-dependencies]
tokio = { version = "1.42", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = [
    "socks",
    "rustls-tls",
] }
axum = { version = "0.8.1" }
